[tool.black]
line-length = 90
target-version = ['py39']

[project]
name = "openmsistream"
license = {text = "GNU GPLv3"}

[build-system]
requires = ["setuptools>=61", "wheel", "build", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "openmsistream/_version.py"  # Stores version info
