[tool.poetry]
name = "openmsistream"
version = "0.0.0"
description = "Python applications for materials data streaming using Apache Kafka. Developed for Open MSI (NSF DMREF award #1921959)"
authors = ["OpenMSIStream <openmsistream@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/openmsi/openmsistream"
repository = "https://github.com/openmsi/openmsistream"
keywords = ["data_streaming", "stream_processing", "apache_kafka", "materials", "data_science"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
packages = [{include = "openmsistream"}]
include = [
    { path = "openmsistream/kafka_wrapper/config_files/**/*", format = ["sdist", "wheel"] },
    { path = "openmsistream/services/working_dir/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.scripts]
UploadDataFile = "openmsistream.data_file_io.entity.upload_data_file:main"
DataFileUploadDirectory = "openmsistream.data_file_io.actor.data_file_upload_directory:main"
DataFileDownloadDirectory = "openmsistream.data_file_io.actor.data_file_download_directory:main"
InstallService = "openmsistream.services.install_service:main"
ManageService = "openmsistream.services.manage_service:main"
ProvisionNode = "openmsistream.tools.provision_wrapper:main"
ReproduceUndecryptableMessages = "openmsistream.tools.undecryptable_messages.reproduce_undecryptable_messages:main"
S3TransferStreamProcessor = "openmsistream.s3_buckets.s3_transfer_stream_processor:main"
GirderUploadStreamProcessor = "openmsistream.girder.girder_upload_stream_processor:main"

[tool.poetry.dependencies]
python = ">=3.9"
atomicwrites = ">=1.4.1"
boto3 = ">=1.26.84"
confluent-kafka = ">=2.0.2"
girder-client = ">=3.1.20"
kafka-python = ">=2.0.2"
kafkacrypto = ">=0.9.10.3"
matplotlib = "*"
methodtools = "*"
msgpack = "*"
openmsitoolbox = ">=1.2.4"
watchdog = ">=3.0.0"

# Optional dependencies (referenced in [tool.poetry.extras])
beautifulsoup4 = {version = "*", optional = true}
black = {version = "<26", optional = true}
docker = {version = "*", optional = true}
gitpython = {version = "*", optional = true}
lxml = {version = "*", optional = true}
marko = {version = "==1.3.0", extras = ["toc"], optional = true}
packaging = {version = "*", optional = true}
pyflakes = {version = ">=3.0.1", optional = true}
pylint = {version = ">=2.16.3,<4", optional = true}
requests = {version = "*", optional = true}
responses = {version = "*", optional = true}
tempenv = {version = ">=2.0.0", optional = true}
unittest-xml-reporting = {version = "*", optional = true}
sphinx = {version = ">=6.1.3", optional = true}
sphinx-rtd-theme = {version = ">=1.2.0", optional = true}
twine = {version = "*", optional = true}
pytest = {version = "*", optional = true}
pytest-cov = {version = "*", optional = true}
testcontainers = {version = "*", optional = true}

[tool.poetry.extras]
test = [
    "beautifulsoup4", "black", "docker", "gitpython", "lxml", "marko",
    "packaging", "pyflakes", "pylint", "requests", "responses", "tempenv",
    "unittest-xml-reporting", "pytest", "pytest-cov", "testcontainers" ]
docs = ["sphinx", "sphinx-rtd-theme"]
dev = ["twine"]
all = [
    "beautifulsoup4", "black", "docker", "gitpython", "lxml", "marko",
    "packaging", "pyflakes", "pylint", "requests", "responses", "tempenv",
    "unittest-xml-reporting", "sphinx", "sphinx-rtd-theme", "twine",
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 90
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --junitxml=test-results/results.xml"
testpaths = ["test", "test_scripts"]
markers = ["kafka: tests that require a Kafka broker"]
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["openmsistream"]
omit = ["*/test/*", "*/test_scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
